--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="main-nav">
                 <a href="/" class="logo">
                     <!-- Logo will go here -->
-                    <img src="images/logo-placeholder.png" alt="GoSortplux Logo">
+                    <img src="images/logo.png" alt="GoSortplux Logo">
                 </a>
                 <ul class="nav-links">
                     <li><a href="#features">Features</a></li>
@@ -74,7 +74,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <a href="/" class="logo">
-                        <img src="images/logo-placeholder.png" alt="GoSortplux Logo">
+                        <img src="images/logo.png" alt="GoSortplux Logo">
                     </a>
                     <p>Modern Solutions for a Modern World.</p>
                 </div>
