--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Elegance in Simplicity. Power in Code.</h1>
+                    <h1 class="hero-title">We turn complex ideas into sleek, high-performing digital solutions.</h1>
                     <p class="hero-subtitle">...the solutions that sorts it!</p>
                     <a href="#coming-soon" class="btn btn-primary">Discover Our Work</a>
                 </div>
@@ -107,11 +107,11 @@
                 <div class="promotion-content">
                     <div class="promotion-text">
                         <h2>Special Promotion!</h2>
-                        <p>Check out our limited-time offer. Don't miss out!</p>
+                        <p>Check out our GoCard (SMARTID). Don't miss out!</p>
                         <a href="#contact" class="btn btn-primary">Learn More</a>
                     </div>
                     <div class="promotion-image">
-                        <img src="images/promo.jpg" alt="Special Promotion">
+                        <img src="images/promo.png" alt="Special Promotion">
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <h2 class="section-title">Our Products</h2>
                 <p class="section-subtitle">Discover our innovative products designed to solve your problems.</p>
                 <div class="products-placeholder">
-                    <p>Our products are currently in development and will be launched soon. Stay tuned!</p>
+                    <p>Exciting digital solutions are in development. Stay tuned for the launch!</p>
                 </div>
             </div>
         </section>
