--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="styles.css">
+      <link rel="icon" type="image/x-icon" href="/images/fav.png">
 </head>
 <body>
 
@@ -133,7 +134,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <a href="/" class="logo">
-                        <img src="images/logo.png" alt="GoSortplux Logo">
+                        <img src="images/logo1.png" alt="GoSortplux Logo">
                     </a>
                     <p>Modern Solutions for a Modern World.</p>
                 </div>
