--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="footer-social">
                     <a href="https://x.com/gosortplux" target="_blank" aria-label="X"><i class="fab fa-twitter"></i></a>
                     <a href="https://facebook.com/gosortplux" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="https://linkedin.com/company/gosortplux" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/go-sortplux-0b7385374/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://instagram.com/gosortplux" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://wa.me/2347034699330" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="mailto:info@gosortplux.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
