--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoSortplux - Modern Solutions</title>
+    <title>GoSortplux - ...the solutions that sorts it!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -145,7 +145,7 @@
                     <a href="/" class="logo">
                         <img src="images/logo1.png" alt="GoSortplux Logo">
                     </a>
-                    <p>Modern Solutions for a Modern World.</p>
+                    <p>...the solutions that sorts it!</p>
                 </div>
                 <div class="footer-contact">
                     <p><i class="fas fa-map-marker-alt"></i> No. 532, Rugan Juli by High tension, City College Road, Karu, Abuja</p>
