--- a/business.html
+++ b/business.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <h2 class="section-title">GoCard for Business</h2>
                 <p class="section-subtitle">Here you can find more details about our GoCard for Business solution.</p>
-                <iframe class="pdf-embed" src="https://example.com/path-to-your/business-document.pdf" title="GoCard for Business PDF"></iframe>
+                <iframe class="pdf-embed" src="images/gobusiness.pdf" title="GoCard for Business PDF"></iframe>
             </div>
         </section>
     </main>
