--- a/schools.html
+++ b/schools.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <h2 class="section-title">GoCard for Schools</h2>
                 <p class="section-subtitle">Here you can find more details about our GoCard for Schools solution.</p>
-                <iframe class="pdf-embed" src="https://example.com/path-to-your/school-document.pdf" title="GoCard for Schools PDF"></iframe>
+                <iframe class="pdf-embed" src="images/goschool.pdf" title="GoCard for Schools PDF"></iframe>
             </div>
         </section>
     </main>
