images in index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="product-card">
                         <div class="product-image-wrapper">
                             <div class="product-image-bg" style="background-image: url('images/product1.jpg')"></div>
-                            <img src="images/product1.jpg" alt="GoCard for Schools" class="product-image">
+                            <img src="images/goschools.png" alt="GoCard for Schools" class="product-image">
                         </div>
                         <div class="product-content">
                             <h3 class="product-title">GoCard for Schools</h3>
@@ -78,7 +78,7 @@
                     <div class="product-card">
                         <div class="product-image-wrapper">
                             <div class="product-image-bg" style="background-image: url('images/product2.jpg')"></div>
-                            <img src="images/product2.jpg" alt="GoCard for Business" class="product-image">
+                            <img src="images/gobusiness.png" alt="GoCard for Business" class="product-image">
                         </div>
                         <div class="product-content">
                             <h3 class="product-title">GoCard for Business</h3>
