--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="product-grid">
                     <div class="product-card">
                         <div class="product-image-wrapper">
-                            <div class="product-image-bg" style="background-image: url('images/product1.jpg')"></div>
+                            <div class="product-image-bg" style="background-image: url('images/goschools.png')"></div>
                             <img src="images/goschools.png" alt="GoCard for Schools" class="product-image">
                         </div>
                         <div class="product-content">
@@ -77,7 +77,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image-wrapper">
-                            <div class="product-image-bg" style="background-image: url('images/product2.jpg')"></div>
+                            <div class="product-image-bg" style="background-image: url('images/gobusiness.png')"></div>
                             <img src="images/gobusiness.png" alt="GoCard for Business" class="product-image">
                         </div>
                         <div class="product-content">
