--- a/schools.html
+++ b/schools.html
@@ -83,7 +83,6 @@
                     <p>GO Card uses both NFC and QR Code technology.</p>
                     <p><strong>Inside the school:</strong> Students tap the card for attendance → triggers instant SMS alerts to parents whenever a student enters or leaves school.</p>
                     <p><strong>Outside the school:</strong> The GO Card can be scanned to access the school’s website and contact a representative (for publicity, enquiries, or emergencies).</p>
-                    <p>📸 [Image Placeholder: Diagram of How GO Card Works]</p>
                 </div>
 
                 <div class="video-container" style="text-align: center; margin-bottom: 3rem;">
@@ -117,7 +116,6 @@
                             <tr><td style="border: 1px solid #ddd; padding: 8px;">Ongoing Technical Support</td><td style="border: 1px solid #ddd; padding: 8px;">✅ Included</td><td style="border: 1px solid #ddd; padding: 8px;">❌ None</td><td style="border: 1px solid #ddd; padding: 8px;">✅ Sometimes</td><td style="border: 1px solid #ddd; padding: 8px;">❌ None</td></tr>
                         </tbody>
                     </table>
-                    <p>📸 [Image Placeholder: Feature Comparison Table Visual]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -137,7 +135,6 @@
                             <tr><td style="border: 1px solid #ddd; padding: 8px;">Phase 4</td><td style="border: 1px solid #ddd; padding: 8px;">Go Live & Support</td><td style="border: 1px solid #ddd; padding: 8px;">Immediate</td></tr>
                         </tbody>
                     </table>
-                    <p>📸 [Image Placeholder: Timeline or Roadmap Graphic]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -161,8 +158,8 @@
                 </div>
 
                 <div class="cta-section" style="text-align: center; padding: 2rem 0;">
-                    <a href="#" class="btn btn-primary" style="margin-right: 1rem;">Download Proposal</a>
-                    <a href="#contact" class="btn btn-secondary">Book a Demo</a>
+                    <a href="images/goschool.pdf" target="_blank" class="btn btn-primary" style="margin-right: 1rem;">Download Proposal</a>
+                    <a href="https://wa.me/2347034699330" target="_blank" class="btn btn-secondary">Book a Demo</a>
                 </div>
             </div>
         </section>
