--- a/business.html
+++ b/business.html
@@ -62,7 +62,6 @@
                     <p>Go Sortplux Limited presents an innovative Smart Identification and Attendance System tailored for organizations seeking a secure, efficient, and digital-forward way to manage staff identity, attendance tracking, and professional networking.</p>
                     <p>Each staff receives a Smart ID Card embedded with NFC technology, which doubles as a digital business card — allowing for tap-to-connect features, instant contact sharing, WhatsApp integration, and social media credibility.</p>
                     <p>Combined with a dashboard and mobile-based attendance system, this solution simplifies internal operations while enhancing external brand presence.</p>
-                    <p>📷 [Insert Image: GoCards Smart ID sample design]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -75,7 +74,6 @@
                         <li>Inconvenient staff contact sharing and engagement</li>
                         <li>No seamless link to professional social platforms</li>
                     </ul>
-                     <p>📷 [Insert Image: Illustration of traditional manual attendance issues]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -87,7 +85,6 @@
                         <li>Direct links to staff’s verified social media profiles (LinkedIn, Instagram, Twitter, etc.)</li>
                         <li>Smart Business Card functionality for external networking and credibility</li>
                     </ul>
-                    <p>📷 [Insert Image: NFC phone scanning card / digital profile dashboard]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -101,7 +98,6 @@
                         <li><strong>WhatsApp Contact Access:</strong> One-tap save or chat with staff from profile</li>
                         <li><strong>Admin Dashboard:</strong> Central system to view, manage, and export attendance and staff records</li>
                     </ul>
-                    <p>📷 [Insert Image: Screenshot of staff profile dashboard]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -114,7 +110,6 @@
                         <li>Multi-functional ID Card (Attendance + Business Card)</li>
                         <li>Improved Internal Efficiency with digital reports and reduced admin work</li>
                     </ul>
-                    <p>📷 [Insert Image: Infographic of benefits]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -145,7 +140,6 @@
                             </tr>
                         </tbody>
                     </table>
-                    <p>📷 [Insert Image: Pricing table graphic]</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
@@ -181,12 +175,11 @@
                             </tr>
                         </tbody>
                     </table>
-                    <p>📷 [Insert Image: Timeline/roadmap graphic]</p>
                 </div>
 
                 <div class="cta-section" style="text-align: center; padding: 2rem 0;">
-                    <a href="#" class="btn btn-primary" style="margin-right: 1rem;">Download Proposal</a>
-                    <a href="#contact" class="btn btn-secondary">Book a Demo</a>
+                    <a href="images/gobusiness.pdf" target="_blank" class="btn btn-primary" style="margin-right: 1rem;">Download Proposal</a>
+                    <a href="https://wa.me/2347034699330" target="_blank" class="btn btn-secondary">Book a Demo</a>
                 </div>
             </div>
         </section>
