--- a/schools.html
+++ b/schools.html
@@ -58,21 +58,23 @@
                 <p class="section-subtitle">Smart Card for Staff and Students.</p>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
-                    <h3>About GO Sortplux</h3>
                     <p>GO Sortplux is a technology solutions provider dedicated to developing smart systems tailored for schools and learning institutions.</p>
                     <p>Our flagship product, GO Card, is an affordable, all-in-one Smart School ID Card and Attendance System built to improve safety, communication, and data tracking in schools.</p>
                 </div>
 
+                <div class="video-container" style="text-align: center; margin-bottom: 3rem;">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VUTxFURVFxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
                 <div class="content-section" style="margin-bottom: 3rem;">
-                    <h3>Purpose of this Proposal</h3>
                     <p>The GO Card is a smart ID and attendance solution designed to enhance student safety, automate attendance tracking, and improve communication with parents.</p>
                     <p>It combines digital ID and instant SMS alerts, giving schools real-time attendance data and parents timely updates.</p>
                     <p>Affordable and easy to use, GO Card helps schools operate more efficiently while promoting accountability and trust from parents.</p>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
-                    <h3>What is GO Card?</h3>
-                    <p><strong>Mission:</strong><br>GO Card is a smart student/staff identification system that integrates:</p>
+                   
+                    <p>GO Card is a smart student/staff identification system that integrates:</p>
                     <ul>
                         <li>Digital ID Cards with school branding, student photo, and vital info (e.g., blood group for emergencies)</li>
                         <li>QR Code Scanning to monitor attendance with timestamps</li>
@@ -83,10 +85,6 @@
                     <p>GO Card uses both NFC and QR Code technology.</p>
                     <p><strong>Inside the school:</strong> Students tap the card for attendance → triggers instant SMS alerts to parents whenever a student enters or leaves school.</p>
                     <p><strong>Outside the school:</strong> The GO Card can be scanned to access the school’s website and contact a representative (for publicity, enquiries, or emergencies).</p>
-                </div>
-
-                <div class="video-container" style="text-align: center; margin-bottom: 3rem;">
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/VUTxFURVFxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
