--- a/schools.html
+++ b/schools.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="content-section" style="margin-bottom: 3rem;">
-                   
+                    <h3>What is GO Card?</h3>
                     <p>GO Card is a smart student/staff identification system that integrates:</p>
                     <ul>
                         <li>Digital ID Cards with school branding, student photo, and vital info (e.g., blood group for emergencies)</li>
